objects/School__c.object
<CustomObject>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School_Address__c</fullName>
        <label>School Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Email__c</fullName>
        <label>School Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>School_Phone__c</fullName>
        <label>School Phone</label>
        <type>Phone</type>
    </fields>
    <label>School</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>